AC_PREREQ([2.50])
AC_INIT(nimuh-data, 1.0)
AC_CANONICAL_TARGET

AM_INIT_AUTOMAKE()

AC_OUTPUT([
Makefile
data/Makefile 
data/windows/Makefile 
data/town_info/Makefile 
data/sound/Makefile 
data/scenary/Makefile 
data/particles/Makefile 
data/objects/Makefile 
data/nimuh/Makefile 
data/misc/Makefile 
data/menu/Makefile 
data/maps/Makefile 
data/main_menu/Makefile 
data/main_menu/es/Makefile 
data/main_menu/en/Makefile 
data/interface/Makefile 
data/help/Makefile 
data/fonts/Makefile 
data/enemy3/Makefile 
data/enemy2/Makefile 
data/enemy1/Makefile 
data/endlevel/Makefile 
data/endlevel/sevilla/Makefile 
data/endlevel/huelva/Makefile 
data/endlevel/cordoba/Makefile 
data/endlevel/jaen/Makefile 
data/endlevel/almeria/Makefile 
data/endlevel/granada/Makefile 
data/endlevel/malaga/Makefile 
data/endlevel/cadiz/Makefile 
data/editgame/Makefile 
data/cursors/Makefile 
data/createmissions/Makefile 
data/board/Makefile 
data/animation/Makefile 
data/adventure/Makefile 
data/adventure/andalucia/Makefile 
data/adventure/andalucia/huelva/Makefile 
data/adventure/andalucia/huelva/eyeleft/Makefile 
data/adventure/andalucia/huelva/objects/Makefile 
data/adventure/andalucia/huelva/photos/Makefile 
data/adventure/andalucia/huelva/eyeright/Makefile 
data/adventure/andalucia/almeria/Makefile 
data/adventure/andalucia/almeria/eyeleft/Makefile 
data/adventure/andalucia/almeria/objects/Makefile 
data/adventure/andalucia/almeria/photos/Makefile 
data/adventure/andalucia/almeria/eyeright/Makefile 
data/adventure/andalucia/lebrija/Makefile 
data/adventure/andalucia/lebrija/eyeleft/Makefile 
data/adventure/andalucia/lebrija/objects/Makefile 
data/adventure/andalucia/lebrija/photos/Makefile 
data/adventure/andalucia/lebrija/eyeright/Makefile 
data/adventure/andalucia/mojacar/Makefile 
data/adventure/andalucia/mojacar/eyeleft/Makefile 
data/adventure/andalucia/mojacar/objects/Makefile 
data/adventure/andalucia/mojacar/photos/Makefile 
data/adventure/andalucia/mojacar/eyeright/Makefile 
data/adventure/andalucia/linares/Makefile 
data/adventure/andalucia/linares/eyeleft/Makefile 
data/adventure/andalucia/linares/objects/Makefile 
data/adventure/andalucia/linares/photos/Makefile 
data/adventure/andalucia/linares/eyeright/Makefile 
data/adventure/andalucia/guadix/Makefile 
data/adventure/andalucia/guadix/eyeleft/Makefile 
data/adventure/andalucia/guadix/objects/Makefile 
data/adventure/andalucia/guadix/photos/Makefile 
data/adventure/andalucia/guadix/eyeright/Makefile 
data/adventure/andalucia/cordoba/Makefile 
data/adventure/andalucia/cordoba/eyeleft/Makefile 
data/adventure/andalucia/cordoba/objects/Makefile 
data/adventure/andalucia/cordoba/photos/Makefile 
data/adventure/andalucia/cordoba/eyeright/Makefile 
data/adventure/andalucia/roquetasdemar/Makefile 
data/adventure/andalucia/roquetasdemar/eyeleft/Makefile 
data/adventure/andalucia/roquetasdemar/objects/Makefile 
data/adventure/andalucia/roquetasdemar/photos/Makefile 
data/adventure/andalucia/roquetasdemar/eyeright/Makefile 
data/adventure/andalucia/granada/Makefile 
data/adventure/andalucia/granada/eyeleft/Makefile 
data/adventure/andalucia/granada/objects/Makefile 
data/adventure/andalucia/granada/photos/Makefile 
data/adventure/andalucia/granada/eyeright/Makefile 
data/adventure/andalucia/lepe/Makefile 
data/adventure/andalucia/lepe/eyeleft/Makefile 
data/adventure/andalucia/lepe/objects/Makefile 
data/adventure/andalucia/lepe/photos/Makefile 
data/adventure/andalucia/lepe/eyeright/Makefile 
data/adventure/andalucia/ubrique/Makefile 
data/adventure/andalucia/ubrique/eyeleft/Makefile 
data/adventure/andalucia/ubrique/objects/Makefile 
data/adventure/andalucia/ubrique/photos/Makefile 
data/adventure/andalucia/ubrique/eyeright/Makefile 
data/adventure/andalucia/baena/Makefile 
data/adventure/andalucia/baena/eyeleft/Makefile 
data/adventure/andalucia/baena/objects/Makefile 
data/adventure/andalucia/baena/photos/Makefile 
data/adventure/andalucia/baena/eyeright/Makefile 
data/adventure/andalucia/ecija/Makefile 
data/adventure/andalucia/ecija/eyeleft/Makefile 
data/adventure/andalucia/ecija/objects/Makefile 
data/adventure/andalucia/ecija/photos/Makefile 
data/adventure/andalucia/ecija/eyeright/Makefile 
data/adventure/andalucia/puntaumbria/Makefile 
data/adventure/andalucia/puntaumbria/eyeleft/Makefile 
data/adventure/andalucia/puntaumbria/objects/Makefile 
data/adventure/andalucia/puntaumbria/photos/Makefile 
data/adventure/andalucia/puntaumbria/eyeright/Makefile 
data/adventure/andalucia/tabernas/Makefile 
data/adventure/andalucia/tabernas/eyeleft/Makefile 
data/adventure/andalucia/tabernas/objects/Makefile 
data/adventure/andalucia/tabernas/photos/Makefile 
data/adventure/andalucia/tabernas/eyeright/Makefile 
data/adventure/andalucia/marbella/Makefile 
data/adventure/andalucia/marbella/eyeleft/Makefile 
data/adventure/andalucia/marbella/objects/Makefile 
data/adventure/andalucia/marbella/photos/Makefile 
data/adventure/andalucia/marbella/eyeright/Makefile 
data/adventure/andalucia/almunecar/Makefile 
data/adventure/andalucia/almunecar/eyeleft/Makefile 
data/adventure/andalucia/almunecar/objects/Makefile 
data/adventure/andalucia/almunecar/photos/Makefile 
data/adventure/andalucia/almunecar/eyeright/Makefile 
data/adventure/andalucia/jerez/Makefile 
data/adventure/andalucia/jerez/eyeleft/Makefile 
data/adventure/andalucia/jerez/objects/Makefile 
data/adventure/andalucia/jerez/photos/Makefile 
data/adventure/andalucia/jerez/eyeright/Makefile 
data/adventure/andalucia/carmona/Makefile 
data/adventure/andalucia/carmona/eyeleft/Makefile 
data/adventure/andalucia/carmona/objects/Makefile 
data/adventure/andalucia/carmona/photos/Makefile 
data/adventure/andalucia/carmona/eyeright/Makefile 
data/adventure/andalucia/jabugo/Makefile 
data/adventure/andalucia/jabugo/eyeleft/Makefile 
data/adventure/andalucia/jabugo/objects/Makefile 
data/adventure/andalucia/jabugo/photos/Makefile 
data/adventure/andalucia/jabugo/eyeright/Makefile 
data/adventure/andalucia/baeza/Makefile 
data/adventure/andalucia/baeza/eyeleft/Makefile 
data/adventure/andalucia/baeza/objects/Makefile 
data/adventure/andalucia/baeza/photos/Makefile 
data/adventure/andalucia/baeza/eyeright/Makefile 
data/adventure/andalucia/islacristina/Makefile 
data/adventure/andalucia/islacristina/eyeleft/Makefile 
data/adventure/andalucia/islacristina/objects/Makefile 
data/adventure/andalucia/islacristina/photos/Makefile 
data/adventure/andalucia/islacristina/eyeright/Makefile 
data/adventure/andalucia/puentegenil/Makefile 
data/adventure/andalucia/puentegenil/eyeleft/Makefile 
data/adventure/andalucia/puentegenil/objects/Makefile 
data/adventure/andalucia/puentegenil/photos/Makefile 
data/adventure/andalucia/puentegenil/eyeright/Makefile 
data/adventure/andalucia/cadiz/Makefile 
data/adventure/andalucia/cadiz/eyeleft/Makefile 
data/adventure/andalucia/cadiz/objects/Makefile 
data/adventure/andalucia/cadiz/photos/Makefile 
data/adventure/andalucia/cadiz/eyeright/Makefile 
data/adventure/andalucia/lucena/Makefile 
data/adventure/andalucia/lucena/eyeleft/Makefile 
data/adventure/andalucia/lucena/objects/Makefile 
data/adventure/andalucia/lucena/photos/Makefile 
data/adventure/andalucia/lucena/eyeright/Makefile 
data/adventure/andalucia/lanjaron/Makefile 
data/adventure/andalucia/lanjaron/eyeleft/Makefile 
data/adventure/andalucia/lanjaron/objects/Makefile 
data/adventure/andalucia/lanjaron/photos/Makefile 
data/adventure/andalucia/lanjaron/eyeright/Makefile 
data/adventure/andalucia/sanlucar/Makefile 
data/adventure/andalucia/sanlucar/eyeleft/Makefile 
data/adventure/andalucia/sanlucar/objects/Makefile 
data/adventure/andalucia/sanlucar/photos/Makefile 
data/adventure/andalucia/sanlucar/eyeright/Makefile 
data/adventure/andalucia/antequera/Makefile 
data/adventure/andalucia/antequera/eyeleft/Makefile 
data/adventure/andalucia/antequera/objects/Makefile 
data/adventure/andalucia/antequera/photos/Makefile 
data/adventure/andalucia/antequera/eyeright/Makefile 
data/adventure/andalucia/sevilla/Makefile 
data/adventure/andalucia/sevilla/eyeleft/Makefile 
data/adventure/andalucia/sevilla/objects/Makefile 
data/adventure/andalucia/sevilla/photos/Makefile 
data/adventure/andalucia/sevilla/eyeright/Makefile 
data/adventure/andalucia/elejido/Makefile 
data/adventure/andalucia/elejido/eyeleft/Makefile 
data/adventure/andalucia/elejido/objects/Makefile 
data/adventure/andalucia/elejido/photos/Makefile 
data/adventure/andalucia/elejido/eyeright/Makefile 
data/adventure/andalucia/motril/Makefile 
data/adventure/andalucia/motril/eyeleft/Makefile 
data/adventure/andalucia/motril/objects/Makefile 
data/adventure/andalucia/motril/photos/Makefile 
data/adventure/andalucia/motril/eyeright/Makefile 
data/adventure/andalucia/ubeda/Makefile 
data/adventure/andalucia/ubeda/eyeleft/Makefile 
data/adventure/andalucia/ubeda/objects/Makefile 
data/adventure/andalucia/ubeda/photos/Makefile 
data/adventure/andalucia/ubeda/eyeright/Makefile 
data/adventure/andalucia/nerja/Makefile 
data/adventure/andalucia/nerja/eyeleft/Makefile 
data/adventure/andalucia/nerja/objects/Makefile 
data/adventure/andalucia/nerja/photos/Makefile 
data/adventure/andalucia/nerja/eyeright/Makefile 
data/adventure/andalucia/utrera/Makefile 
data/adventure/andalucia/utrera/eyeleft/Makefile 
data/adventure/andalucia/utrera/objects/Makefile 
data/adventure/andalucia/utrera/photos/Makefile 
data/adventure/andalucia/utrera/eyeright/Makefile 
data/adventure/andalucia/jaen/Makefile 
data/adventure/andalucia/jaen/eyeleft/Makefile 
data/adventure/andalucia/jaen/objects/Makefile 
data/adventure/andalucia/jaen/photos/Makefile 
data/adventure/andalucia/jaen/eyeright/Makefile 
data/adventure/andalucia/ronda/Makefile 
data/adventure/andalucia/ronda/eyeleft/Makefile 
data/adventure/andalucia/ronda/objects/Makefile 
data/adventure/andalucia/ronda/photos/Makefile 
data/adventure/andalucia/ronda/eyeright/Makefile 
data/adventure/andalucia/tarifa/Makefile 
data/adventure/andalucia/tarifa/eyeleft/Makefile 
data/adventure/andalucia/tarifa/objects/Makefile 
data/adventure/andalucia/tarifa/photos/Makefile 
data/adventure/andalucia/tarifa/eyeright/Makefile 
data/adventure/andalucia/fuenteovejuna/Makefile 
data/adventure/andalucia/fuenteovejuna/eyeleft/Makefile 
data/adventure/andalucia/fuenteovejuna/objects/Makefile 
data/adventure/andalucia/fuenteovejuna/photos/Makefile 
data/adventure/andalucia/fuenteovejuna/eyeright/Makefile 
data/adventure/andalucia/andujar/Makefile 
data/adventure/andalucia/andujar/eyeleft/Makefile 
data/adventure/andalucia/andujar/objects/Makefile 
data/adventure/andalucia/andujar/photos/Makefile 
data/adventure/andalucia/andujar/eyeright/Makefile 
data/adventure/andalucia/malaga/Makefile 
data/adventure/andalucia/malaga/eyeleft/Makefile 
data/adventure/andalucia/malaga/objects/Makefile 
data/adventure/andalucia/malaga/photos/Makefile 
data/adventure/andalucia/malaga/eyeright/Makefile
])
