bin_PROGRAMS=nimuh
INCLUDES = $(AM_CFLAGS) -DDATA_DIR=\""$(nimuhdir)/data"\" -ggdb3 -Wall
nimuh_LDADD = $(AM_LDFLAGS)

nimuhdir = $(datadir)/nimuh


nimuh_SOURCES=\
application.cpp \
chronometer.cpp \
class_editgame.cpp \
class_game.cpp \
cursor.cpp \
elements.cpp \
font.cpp \
hash.cpp \
joystick.cpp \
language.cpp \
missions.cpp \
main.cpp \
options.cpp \
sceneanimation.cpp \
scene_changelanguage.cpp \
scene.cpp \
scene_createmissions.cpp \
scene_credits.cpp \
scene_editgame.cpp \
scene_game.cpp \
scene_infotown.cpp \
scene_menu.cpp \
score.cpp \
sound.cpp \
timer.cpp \
user.cpp \
world.cpp


EXTRA_DIST=\
application.h \
chronometer.h \
class_editgame.h \
class_game.h \
cursor.h \
defines_game.h \
defines.h \
elements.h \
font.h \
glext.h \
hash.h \
joystick.h \
language.h \
martian.h \
missions.h \
options.h \
sceneanimation.h \
scene_changelanguage.h \
scene_createmissions.h \
scene_credits.h \
scene_editgame.h \
scene_game.h \
scene.h \
scene_infotown.h \
scene_menu.h \
score.h \
sound.h \
timer.h \
user.h \
world.h
