datosdir = $(datadir)/nimuh/data/animation



datos_DATA = animation.xml \
applause.ogg \
applauseroom.ogg \
asteroid.ogg \
bg_barprogress.png \
caninostudios.png \
car.ogg \
desert.ogg \
desert_es_0002.png \
text_11_en.png \
desert_es_0001.png \
text_10_en.png \
desert_es_0005.png \
desert_es_0003.png \
desert_es_0007.png \
desert_es_0010.png \
desert_es_0008.png \
desert_es_0012.png \
desert_es_0015.png \
desert_es_0013.png \
desert_es_0019.png \
desert_es_0021.png \
eureka.ogg \
intro.ogg \
junta.png \
map0.jpg \
map1.jpg \
map2.jpg \
map3.jpg \
observatory.ogg \
observatory.png \
ovni_space.ogg \
point.png \
scene10_enemies.png \
scene10bg.png \
scene10daise.png \
scene3_bg.jpg \
scene3_dr_0000.jpg \
scene3_dr_0001.jpg \
scene3_dr_0002.jpg \
scene3_dr_0003.jpg \
scene3_dr_0004.jpg \
scene3_dr_0005.jpg \
scene3_dr_0006.jpg \
scene3_dr_0007.jpg \
scene3_dr_0008.jpg \
scene3_dr_0009.jpg \
scene3_dr_0010.jpg \
scene3_dr_0011.jpg \
scene3_dr_0012.jpg \
scene3_dr_0013.jpg \
scene3_dr_0014.jpg \
scene3_key_0000.jpg \
scene3_key_0001.jpg \
scene3_key_0002.jpg \
scene3_key_0003.jpg \
scene3_screens_0000.png \
scene3_screens_0001.png \
scene3_screens_0002.png \
scene4_telescope_0000.png \
scene4_telescope_0001.png \
scene4_telescope_0002.png \
scene5_doctor_0000.png \
scene5_doctor_0001.png \
scene5_doctor_0002.png \
scene5_doctor_0003.png \
scene5_doctor_0004.png \
scene5_doctor_0005.png \
scene5_table.png \
scene5arrow.png \
scene5bg.jpg \
scene5board.png \
scene5board_andalucia.png \
scene5board_interference.png \
scene5board_monument.png \
scene5board_zerg.png \
scene6bg.jpg \
scene6nimuh_0000.png \
scene6nimuh_0001.png \
scene6nimuh_0002.png \
scene6nimuh_0003.png \
scene6nimuh_0004.png \
scene6nimuh_0005.png \
scene6nimuh_0006.png \
scene6nimuh_0007.png \
scene7.png \
scene7_00_0000.png \
scene7_00_0001.png \
scene7_00_0002.png \
scene7_01_0000.png \
scene7_01_0001.png \
scene7_10_0000.png \
scene7_10_0001.png \
scene7_10_0002.png \
scene7_11_0000.png \
scene7_11_0001.png \
scene7_11_0002.png \
scene8_earth.png \
scene8_ovni_0000.png \
scene8_ovni_0001.png \
scene8_rock_0000.png \
scene8_rock_0001.png \
scene9_part_0000.png \
scene9_part_0001.png \
scene9_part_0002.png \
scene9desert.png \
scene9desert_explode.png \
scene9moon.png \
surprised.ogg \
write.ogg \
victory.ogg \
zergcity.png \
zergcity_eye_0000.png \
zergcity_eye_0001.png \
zergcity_lights_0000.png \
zergcity_lights_0001.png \
zergcity_lights_0002.png \
zergcity_lights_0003.png \
zergplanet.png \
text_9_en.png \
text_11_es.png \
text_10_es.png \
text_9_es.png \
text_8_es.png \
text_4_es.png \
text_6_es.png \
text_5_es.png \
text_7_es.png \
text_3_es.png \
text_2_es.png \
text_1_es.png \
text_0_es.png \
text_8_en.png \
text_7_en.png \
text_6_en.png \
text_5_en.png \
text_4_en.png \
text_3_en.png \
text_2_en.png \
text_1_en.png \
text_0_en.png \
desert_en_0020.png \
desert_en_0019.png \
desert_en_0018.png \
desert_en_0017.png \
desert_en_0016.png \
desert_en_0015.png \
desert_en_0023.png \
desert_en_0022.png \
desert_en_0021.png \
desert_en_0014.png \
desert_en_0013.png \
desert_en_0012.png \
desert_en_0011.png \
desert_en_0010.png \
desert_en_0009.png \
desert_en_0008.png \
desert_en_0007.png \
desert_en_0006.png \
desert_en_0005.png \
desert_en_0004.png \
desert_en_0003.png \
desert_en_0002.png \
desert_en_0001.png \
desert_en_0000.png \
desert_es_0000.png \
desert_es_0023.png \
desert_es_0018.png \
desert_es_0022.png \
desert_es_0020.png \
desert_es_0017.png \
desert_es_0016.png \
desert_es_0014.png \
desert_es_0011.png \
desert_es_0009.png \
desert_es_0006.png \
desert_es_0004.png

EXTRA_DIST = $(datos_DATA)
