datosdir = $(datadir)/nimuh/data/board



datos_DATA = pavement_2_bottom.png \
wall_8_h.png \
pavement_7_bottom.png \
wall_0_v.png \
floor_0008.png \
floor_0021.png \
floor_0017.png \
floor_0009.png \
floor_0006.png \
pavement_3_bottom.png \
floor_0005.png \
pavement_2_top.png \
wall_8_v.png \
arrow_r.png \
floor_0016.png \
wall_9_v.png \
floor_0001.png \
wall_10_h.png \
floor_0000.png \
pavement_0_bottom.png \
floor_0007.png \
wall_7_v.png \
pavement_4_top.png \
pavement_1_top.png \
wall_9_h.png \
wall_7_h.png \
floor_0013.png \
wall_1_h.png \
floor_0010.png \
wall_1_v.png \
wall_3_v.png \
wall_4_h.png \
trap_0001.png \
wall_0_h.png \
pavement_1_bottom.png \
door_v_0001.png \
wall_5_v.png \
wall_6_h.png \
arrow_u.png \
wall_3_h.png \
door_v.png \
trap_0003.png \
pavement_0_top.png \
wall_4_v.png \
floor_0020.png \
door_h_0001.png \
floor_shadow.png \
pavement_5_bottom.png \
floor_0002.png \
floor_0011.png \
door_v_0002.png \
pavement_6_top.png \
door_h_0002.png \
arrow_l.png \
floor_0012.png \
pavement_7_top.png \
trap_0000.png \
boardinfo.xml \
floor_0018.png \
floor_0003.png \
pavement_3_top.png \
door_h_0000.png \
pavement_5_top.png \
circle.png \
floor_0004.png \
trap_0002.png \
floor_0014.png \
wall_2_v.png \
door_v_0003.png \
floor_0019.png \
door_h_0003.png \
door_h.png \
wall_6_v.png \
wall_5_h.png \
arrow_d.png \
floor_0015.png \
wall_10_v.png \
pavement_6_bottom.png \
wall_2_h.png \
door_v_0000.png \
pavement_4_bottom.png

EXTRA_DIST = $(datos_DATA)
