datosdir = $(datadir)/nimuh/data/createmissions



datos_DATA = bleft_off.png \
form_base_missions.png \
bg_textbox_on.png \
base_levels.png \
base_cflow.png \
boxlevel_number.png \
bg_bluesmall_textarea_active.png \
form_create_mission_en.png \
back_es.png \
exit_es.png \
bleft_on.png \
form_base_levels.png \
bg_middle_textarea_active.png \
play_es.png \
play_en.png \
bg_textbox_active.png \
edit_off_es.png \
bg_bluesmall_textarea.png \
exit_en.png \
form_create_mission_es.png \
form_create_level_es.png \
edit_on_en.png \
bg_middle_textarea_on.png \
screen_cflow.png \
create_mission_en.png \
bg_small_textarea_on.png \
bup_off.png \
bup_on.png \
bg_small_textarea.png \
back_en.png \
form_create_level_en.png \
edit_on_es.png \
frameup_en.png \
face_enemy1.png \
boxlevel_text.png \
edit_off_en.png \
bg_small_textarea_active.png \
frameup_levels_es.png \
bg_bluesmall_textarea_on.png \
bg_textbox.png \
bg_big_textarea.png \
create_mission_es.png \
frameup_es.png \
framedown.png \
frameup_levels_en.png \
bg_middle_textarea.png \
help_es.png \
help_en.png

EXTRA_DIST = $(datos_DATA)
