datosdir = $(datadir)/nimuh/data/editgame



datos_DATA = t_10x10.png \
t_tiled_0003.png \
t_wall_0002.png \
t_tiled_0000.png \
t_pavement_0007.png \
ico_duplicate.png \
menuitem_clean.png \
t_tiled_0005.png \
b_objects_game_es.png \
b_blackhole2.png \
addobject_en.png \
b_cleanreset_en.png \
b_objects_personal_en.png \
t_floor_0010.png \
b_objects_text_en.png \
t_wall_0007.png \
b_alignleft_off.png \
t_wall_0005.png \
ico_flip.png \
t_terrain_0007.png \
menuitem_rules.png \
ico_zoomin.png \
t_7x7.png \
b_door.png \
t_pavement_0001.png \
t_floor_0007.png \
b_cleanreset_es.png \
b_alignright_off.png \
t_terrain_0000.png \
t_tiled_0001.png \
b_key.png \
t_pavement_0004.png \
b_cleanboard_en.png \
t_9x9.png \
t_tiled_0006.png \
t_wall_0001.png \
b_cleanscenary_es.png \
menu_bg.png \
b_grate.png \
ico_delete.png \
floor_on.png \
arrow_left.png \
ico_lock.png \
b_enemy3.png \
ico_zoomout.png \
b_aligncenter_off.png \
t_terrain_0014.png \
b_enemy2.png \
b_objects_personal_es.png \
t_terrain_0012.png \
t_terrain_0008.png \
t_pavement_0003.png \
ico_orderbottom.png \
t_floor_0009.png \
t_wall_0010.png \
t_floor_0008.png \
t_terrain_0005.png \
t_wall_0004.png \
edit_eat.png \
t_floor_0000.png \
t_wall_0006.png \
t_floor_0002.png \
t_wallscenary_0001.png \
b_inserttext_en.png \
b_alignleft_on.png \
b_alignright_on.png \
b_tray.png \
t_terrain_0006.png \
t_pavement_0002.png \
b_objects_game_en.png \
b_objects_text_es.png \
t_6x6.png \
t_wall_0000.png \
b_aligncenter_on.png \
b_info_main_en.png \
b_info_music_en.png \
t_wall_0009.png \
t_wallscenary_0005.png \
t_8x8.png \
menuitem_save.png \
t_wall_0003.png \
b_info_data_en.png \
t_pavement_0005.png \
t_tiled_0007.png \
t_floor_0003.png \
handtray.png \
t_terrain_0009.png \
t_terrain_0002.png \
b_trap.png \
t_floor_0004.png \
t_wallscenary_0000.png \
t_tiled_0004.png \
menuitem_editinfo.png \
blackhole_2.png \
blackhole_1.png \
b_info_data_es.png \
t_terrain_0013.png \
bluebox.png \
t_floor_0006.png \
t_terrain_0011.png \
b_cleanboard_es.png \
b_nimuh.png \
t_wall_0008.png \
t_terrain_0015.png \
ico_ordertop.png \
t_pavement_0006.png \
t_wallscenary_0004.png \
b_wall_bottom.png \
ico_unlock.png \
b_info_music_es.png \
b_inserttext_es.png \
t_tiled_0002.png \
t_floor_0005.png \
t_floor_0001.png \
b_cleanscenary_en.png \
b_on.png \
t_terrain_0004.png \
addobject_es.png \
b_enemy1.png \
t_pavement_0000.png \
t_terrain_0016.png \
b_off.png \
b_info_main_es.png \
b_wall_right.png \
b_blackhole1.png \
menuitem_help.png \
arrow_right.png \
bg_arrow.png \
t_terrain_0010.png \
t_wallscenary_0002.png \
t_terrain_0003.png \
t_wallscenary_0003.png \
menuitem_quit.png \
box_object.png \
t_terrain_0001.png \
b_addinfo_es.png \
b_addinfo_en.png

EXTRA_DIST = $(datos_DATA)
