datosdir = $(datadir)/nimuh/data/enemy1



datos_DATA = enemy1_0020.png \
enemy1_0008.png \
enemy1_0005.png \
enemy1_0027.png \
enemy1_0011.png \
enemy1_0022.png \
impatient_0000.png \
proud1_0003.png \
enemy1_0009.png \
crying_0002.png \
proud0_0003.png \
enemy1_0017.png \
enemy1_0015.png \
enemy1_0007.png \
enemy1_0024.png \
enemy1_0003.png \
enemy1_0026.png \
impatient_0002.png \
enemy1_0010.png \
crying_0001.png \
enemy1_0019.png \
enemy1_0000.png \
enemy1_0013.png \
enemy1_0004.png \
impatient_0001.png \
eating_0000.png \
enemy1_0001.png \
proud0_0002.png \
proud0_0000.png \
proud1_0002.png \
eating_0002.png \
enemy1_0006.png \
impatient_0003.png \
proud1_0000.png \
enemy1_0016.png \
proud1_0001.png \
enemy1_0012.png \
proud0_0001.png \
eating_0003.png \
enemy1_0023.png \
enemy1_0025.png \
proud1_0004.png \
crying_0000.png \
eating_0001.png \
enemy1_0018.png \
enemy1_0021.png \
enemy1_0002.png \
enemy1_0014.png \
proud1_0005.png

EXTRA_DIST = $(datos_DATA)
