datosdir = $(datadir)/nimuh/data/help



datos_DATA = grate.png \
blackhole.png \
enemy1.png \
enemy2.png \
tray.png \
enemy3.png \
trap.png \
createmission_help_1_en.png \
createmission_help_1_es.png \
createmission_help_2_en.png \
createmission_help_2_es.png \
createmission_help_3_en.png \
createmission_help_3_es.png \
createmission_help_4_en.png \
createmission_help_4_es.png \
editlevel_help_1_en.png \
editlevel_help_1_es.png \
editlevel_help_2_en.png \
editlevel_help_2_es.png \
editlevel_help_3_en.png \
editlevel_help_3_es.png \
editlevel_help_4_en.png \
editlevel_help_4_es.png \
editlevel_help_5_en.png \
editlevel_help_5_es.png \
editlevel_help_6_1_en.png \
editlevel_help_6_1_es.png \
editlevel_help_6_2_en.png \
editlevel_help_6_2_es.png \
editlevel_help_7_en.png \
editlevel_help_7_es.png \
editlevel_help_8_en.png \
editlevel_help_8_es.png \
help_bg.png \
help.png \
sol_level1_0_en.jpg \
sol_level1_0_es.jpg \
sol_level1_1_en.jpg \
sol_level1_1_es.jpg \
sol_level1_2_en.jpg \
sol_level1_2_es.jpg \
sol_level1_3_en.jpg \
sol_level1_3_es.jpg \
sol_level1_4_en.jpg \
sol_level1_4_es.jpg

EXTRA_DIST = $(datos_DATA)
