datosdir = $(datadir)/nimuh/data/interface



datos_DATA = arrow_up.png \
sound2.png \
arrow_right_brown.png \
fx3.png \
radblue_off.png \
edit_en.png \
sound0.png \
play_es.png \
play_en.png \
edit_es.png \
up.png \
base_users.png \
fx4.png \
radblue_on.png \
sound1.png \
sound4.png \
sound3.png \
rad_off.png \
arrow_up_off.png \
use_es.png \
fx1.png \
sound5.png \
fx5.png \
arrow_right_off.png \
rad_on.png \
fx2.png \
boxuser_text.png \
rad2_on.png \
arrow_left_brown.png \
delete.png \
use_en.png \
fx0.png \
arrow_right.png

EXTRA_DIST = $(datos_DATA)
