datosdir = $(datadir)/nimuh/data/menu



datos_DATA = eye_right_0003.png \
b_next_on.png \
b_reset_on_es.png \
b_next_off.png \
quit_es.png \
eye_left_0004.png \
b_options_on_es.png \
eye_right_0001.png \
next.png \
eye_left_0000.png \
b_reset_off_en.png \
eye_left_0001.png \
b_quit_off_es.png \
bg.png \
eye_right_0002.png \
previous.png \
b_previous_off.png \
eye_left_0003.png \
b_reset_on_en.png \
b_options_off_en.png \
reset_es.png \
b_quit_on_es.png \
b_options_off_es.png \
b_options_on_en.png \
b_previous_on.png \
eye_left_0002.png \
eye_right_0000.png \
b_reset_off_es.png \
b_quit_on_en.png \
b_quit_off_en.png \
options_es.png \
eye_right_0004.png

EXTRA_DIST = $(datos_DATA)
