datosdir = $(datadir)/nimuh/data/objects



datos_DATA = trap_particles_0001.png \
blackhole_particles_0001.png \
blackhole_particles_0000.png \
blackhole_0002.png \
grate_0004.png \
grate_0002.png \
grate_0001.png \
blackhole_particles_0003.png \
tray.png \
key.png \
trap_particles_0002.png \
trap_particles_0000.png \
blackhole_particles_0002.png \
blackhole_0000.png \
blackhole_0001.png \
trap_particles_0003.png \
grate_0000.png \
blackhole_0003.png \
grate_0003.png

EXTRA_DIST = $(datos_DATA)
