datosdir = $(datadir)/nimuh/data/sound



datos_DATA = open_eye.ogg \
steps_enemy2.ogg \
windows_win.ogg \
music_editor.ogg \
pop.ogg \
blackhole_out.ogg \
menubar.ogg \
beep1.ogg \
ovni_sound.ogg \
steps_enemy1.ogg \
steps_enemy3.ogg \
click1.ogg \
doorkey.ogg \
out_door.ogg \
nimuh_clean.ogg \
enemy2_cazzo.ogg \
nimuh_scratch.ogg \
crying.ogg \
game1.ogg \
teletransport.ogg \
music_town.ogg \
windows.ogg \
enemy2_peeing.ogg \
steps_nimuh.ogg \
options.ogg \
gun.ogg \
beep0.ogg \
click0.ogg \
enemy1_impatient.ogg \
game0.ogg \
game2.ogg \
enemy1_proud.ogg \
jail.ogg \
eating.ogg \
open_tray.ogg \
colision.ogg \
game3.ogg \
windows_captured.ogg \
blackhole_in.ogg \
skandaluz.ogg

EXTRA_DIST = $(datos_DATA)
