datosdir = $(datadir)/nimuh/data/windows



datos_DATA = captured_en.png \
frame_up.png \
congratulations_en.png \
completed_es.png \
showmessage_en.png \
showalert_es.png \
arrow_left.png \
frame_down.png \
box.png \
completed_en.png \
info_en.png \
middlebox.png \
showmessage_es.png \
options_en.png \
showalert_en.png \
info_es.png \
bigbox.png \
congratulations_es.png \
options_es.png \
captured_es.png \
arrow_right.png

EXTRA_DIST = $(datos_DATA)
