datosdir = $(datadir)/nimuh/data

SUBDIRS = windows \
town_info \
sound \
scenary \
particles \
objects \
nimuh \
misc \
menu \
maps \
main_menu \
interface \
help \
fonts \
enemy3 \
enemy2 \
enemy1 \
endlevel \
editgame \
cursors \
createmissions \
board \
animation \
adventure

datos_DATA = title.png \
languages.xml \
bg_barprogress.png

EXTRA_DIST = $(datos_DATA)
