datosdir = $(datadir)/nimuh/data/adventure/andalucia

SUBDIRS = huelva \
almeria \
lebrija \
mojacar \
linares \
guadix \
cordoba \
roquetasdemar \
granada \
lepe \
ubrique \
baena \
ecija \
puntaumbria \
tabernas \
marbella \
almunecar \
jerez \
carmona \
jabugo \
baeza \
islacristina \
puentegenil \
cadiz \
lucena \
lanjaron \
sanlucar \
antequera \
sevilla \
elejido \
motril \
ubeda \
nerja \
utrera \
jaen \
ronda \
tarifa \
fuenteovejuna \
andujar \
malaga

datos_DATA = mission.xml

EXTRA_DIST = $(datos_DATA)
