datosdir = $(datadir)/nimuh/data/enemy2



datos_DATA = peeing_0007.png \
enemy2_0005.png \
peeing_0002.png \
enemy2_0024.png \
enemy2_0015.png \
enemy2_0013.png \
crying_0002.png \
peeing_0006.png \
peeing_0010.png \
enemy2_0022.png \
enemy2_0016.png \
peeing_0004.png \
enemy2_0006.png \
peeing_0009.png \
peeing_0012.png \
enemy2_0017.png \
cazzo0_0000.png \
enemy2_0012.png \
enemy2_0021.png \
cazzo1_0000.png \
enemy2_0010.png \
enemy2_0003.png \
cazzo1_0001.png \
crying_0001.png \
peeing_0005.png \
enemy2_0002.png \
enemy2_0026.png \
enemy2_0000.png \
enemy2_0020.png \
eating_0000.png \
enemy2_0025.png \
peeing_0011.png \
enemy2_0007.png \
eating_0002.png \
peeing_0000.png \
peeing_0008.png \
enemy2_0018.png \
eating_0003.png \
enemy2_0023.png \
peeing_0003.png \
crying_0000.png \
eating_0001.png \
enemy2_0014.png \
enemy2_0011.png \
peeing_0001.png \
enemy2_0009.png \
enemy2_0004.png \
enemy2_0027.png \
enemy2_0001.png \
cazzo1_0002.png \
enemy2_0008.png \
cazzo0_0001.png \
enemy2_0019.png

EXTRA_DIST = $(datos_DATA)
