datosdir = $(datadir)/nimuh/data/enemy3



datos_DATA = enemy3_0001.png \
enemy3_0003.png \
enemy3_0011.png \
crying_0002.png \
enemy3_0005.png \
enemy3_0007.png \
crying_0001.png \
enemy3_0010.png \
eating_0000.png \
enemy3_0008.png \
eating_0002.png \
enemy3_0002.png \
eating_0003.png \
enemy3_0006.png \
crying_0000.png \
eating_0001.png \
enemy3_0004.png \
enemy3_0000.png \
enemy3_0009.png \
crying_0003.png

EXTRA_DIST = $(datos_DATA)
