datosdir = $(datadir)/nimuh/data/misc



datos_DATA = cover.png \
england.png \
font_wall1.png \
spain.png \
font_wall0.png \
howtoplay_es.png \
junta.png \
howtoplay_en.png \
font_wall2.png \
font_wall3.png \
font_wall4.png \
font_wall5.png \
pjs.jpg \
earth.jpg \
title.jpg

EXTRA_DIST = $(datos_DATA)
