datosdir = $(datadir)/nimuh/data/nimuh



datos_DATA = greeting_0003.png \
nimuh_0002.png \
clean0_0005.png \
nimuh_0018.png \
nimuh_0003.png \
clean0_0003.png \
nimuh_0011.png \
nimuh_0027.png \
clean0_0001.png \
nimuh_0021.png \
jail_0000.png \
nimuh_0010.png \
scratch1_0002.png \
greeting_0002.png \
nimuh_0001.png \
scratch1_0000.png \
nimuh_0012.png \
scratch0_0000.png \
scratch1_0001.png \
nimuh_0005.png \
clean0_0002.png \
nimuh_0015.png \
nimuh_0026.png \
jail_0003.png \
nimuh_0000.png \
nimuh_0017.png \
nimuh_0004.png \
nimuh_0024.png \
nimuh_0013.png \
clean0_0004.png \
nimuh_0007.png \
nimuh_0016.png \
nimuh_0014.png \
nimuh_0023.png \
greeting_0000.png \
nimuh_0025.png \
nimuh_0019.png \
jail_0001.png \
nimuh_0022.png \
greeting_0001.png \
clean0_0000.png \
clean1_0001.png \
greeting_0004.png \
clean1_0000.png \
nimuh_0009.png \
jail_0002.png \
nimuh_0006.png \
scratch0_0001.png \
nimuh_0008.png \
nimuh_0020.png

EXTRA_DIST = $(datos_DATA)
