datosdir = $(datadir)/nimuh/data/scenary



datos_DATA = min_window11.png \
min_flowerpot3.png \
min_bench3.png \
min_wood_tables.png \
tile_0_down.png \
min_window5.png \
font.png \
tile_2_down.png \
signal_0.png \
min_palmpot.png \
min_light3.png \
bench2.png \
min_culvert.png \
door5.png \
tree2.png \
min_mezquita_door.png \
min_window13.png \
min_wood_fence.png \
terrain11.jpg \
golf_hole.png \
min_light5.png \
min_light6.png \
min_lamp.png \
hamaca1.png \
window5.png \
door1.png \
light3.png \
min_window1.png \
light5.png \
terrain12.jpg \
window3.png \
min_door3.png \
min_rock0.png \
tile_6_down.png \
min_window2.png \
signal_1.png \
min_stick_chain.png \
terrain15.jpg \
min_bench.png \
palmpot2.png \
tile_5_up.png \
tile_2_up.png \
guadix_chimney3.png \
min_trash_bin2.png \
min_flowerpot1.png \
min_cornice1.png \
wood_tables_big.png \
wallscenary4.png \
min_window10.png \
min_signal_1.png \
min_tree5.png \
palmtree.png \
min_golf_hole.png \
tile_4_up.png \
light6.png \
window7.png \
tile_1_up.png \
terrain2.jpg \
parasol2.png \
wallscenary2.png \
min_bench4.png \
wallscenary1.png \
min_guadix_chimney1.png \
window11.png \
min_flowerpot2.png \
min_wood_pasage.png \
barrel2.png \
min_door1.png \
guadix_chimney2.png \
terrain14.jpg \
plastic.png \
cornice1.png \
min_bush2.png \
tile_6_up.png \
min_bench6.png \
min_window7.png \
min_tree2.png \
min_palmtree2.png \
medallon.png \
lamp.png \
terrace.png \
window9.png \
guide_opened.png \
palmtree2.png \
tree5.png \
min_bench2.png \
terrain7.jpg \
pineapple.png \
min_hamaca1.png \
min_pineapple.png \
min_parasol2.png \
window8.png \
tile_0_up.png \
min_plaque.png \
min_alhambra2.png \
light4.png \
min_flowers.png \
min_bush1.png \
min_palmpot2.png \
wallscenary3.png \
wood_bench.png \
min_window4.png \
wood_pasage.png \
herbs.png \
min_cornice0.png \
min_herbs.png \
window10.png \
flowerpot3.png \
rock1.png \
castle_0.png \
min_barrel.png \
flowerpot1.png \
min_window6.png \
min_window9.png \
terrain3.jpg \
alhambra1.png \
min_window12.png \
palmpot.png \
flowers.png \
window13.png \
min_font.png \
bench3.png \
door4.png \
min_tree1.png \
min_door2.png \
signal_2.png \
tile_7_down.png \
min_castle_0.png \
alhambra2.png \
min_signal_3.png \
fence1.png \
light1.png \
tree4.png \
min_fence1.png \
towel.png \
min_rock2.png \
min_light1.png \
min_draw1.png \
wood_fence.png \
tile_1_down.png \
wood_tables.png \
column.png \
min_tree3.png \
draw1.png \
wallscenary0.png \
min_column1.png \
rock0.png \
min_hamaca2.png \
min_palmtree3.png \
barrel.png \
tile_7_up.png \
min_door.png \
min_guadix_chimney2.png \
bench6.png \
guide_closed.png \
terrain5.jpg \
bush1.png \
min_parasol.png \
terrain0.jpg \
min_door5.png \
min_light2.png \
stick1.png \
tree1.png \
objects.xml \
min_window3.png \
window6.png \
door.png \
tile_4_down.png \
min_signal_0.png \
terrain1.jpg \
min_window8.png \
tile_5_down.png \
bench4.png \
min_bench5.png \
stick_chain.png \
min_cornice2.png \
terrain9.jpg \
terrain6.jpg \
min_light4.png \
bench5.png \
ball.png \
tree3.png \
terrain8.jpg \
terrain16.jpg \
wall_shadow.png \
bricks.png \
min_garagedoor.png \
min_towel.png \
min_trash_bin.png \
terrain4.jpg \
bench.png \
min_plastic.png \
min_tree0.png \
plaque.png \
min_rock1.png \
window2.png \
cornice0.png \
mezquita_door.png \
window4.png \
guadix_chimney1.png \
min_bush0.png \
signal_3.png \
tile_3_up.png \
culvert.png \
min_terrace.png \
min_signal_2.png \
flowerpot2.png \
bush0.png \
min_column.png \
min_tree4.png \
window14.png \
parasol.png \
min_bricks.png \
column1.png \
hamaca2.png \
tree0.png \
garagedoor.png \
door2.png \
min_guadix_chimney3.png \
terrain13.jpg \
window12.png \
door3.png \
bush2.png \
min_barrel2.png \
trash_bin2.png \
trash_bin.png \
min_medallon.png \
min_wood_bench.png \
min_palmtree.png \
cornice2.png \
ecija_door.png \
palmtree3.png \
min_wood_tables_big.png \
min_ball.png \
window1.png \
min_alhambra1.png \
light2.png \
tile_3_down.png \
rock2.png \
terrain10.jpg \
min_door4.png \
min_stick1.png \
light7.png \
publicity_closed.png \
publicity_opened.png \
min_publicity_closed2.png \
min_publicity_opened.png \
min_publicity_closed.png \
publicity_closed2.png \
publicity_opened2.png \
wallscenary5.png \
grid.png \
min_publicity_opened2.png \
min_light7.png \
min_window14.png \
min_grid2.png \
min_grid.png \
min_door6.png \
min_airconditioning2.png \
min_airconditioning.png \
grid2.png \
door6.png \
airconditioning2.png \
airconditioning.png \
min_door7.png \
door7.png

EXTRA_DIST = $(datos_DATA)
