datosdir = $(datadir)/nimuh/data/town_info



datos_DATA = button2_on.png \
button7_off.png \
elvis_0002.png \
interferences.png \
button6_on.png \
light_0000.png \
pino_0003.png \
light_0004.png \
button4_off.png \
button2_off.png \
elvis_0004.png \
up.png \
continue_3_en.png \
scroll_up.png \
button0_on.png \
light_0002.png \
continue_2_en.png \
button5_on.png \
continue_2_es.png \
rocket.png \
button5_off.png \
light_0001.png \
space.png \
continue_0_es.png \
button7_on.png \
elvis_0003.png \
button1_on.png \
button6_off.png \
button4_on.png \
button3_on.png \
continue_1_en.png \
elvis_0000.png \
pino_0004.png \
pino_0001.png \
button0_off.png \
button3_off.png \
elvis_0001.png \
pino_0000.png \
button1_off.png \
continue_3_es.png \
pino_0002.png \
screens.png \
continue_0_en.png \
light_0003.png \
down.png \
continue_1_es.png

EXTRA_DIST = $(datos_DATA)
